# python-memwiper

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  INSTALL.txt  LICENSE  MANIFEST.in  README.md  README.rst  TODO.rst  appveyor.yml  appveyor.yml.bkp  bandit.yml  codecov.yml  coretest.py  help.rst  memleak-test.sh  pip-selfcheck.json  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.txt  tox.ini
.github/workflows/: pythonpackage.yml
ci/: appveyor-download.py  bootstrap.py  requirements.txt
ci/templates/: .travis.yml  appveyor.yml  tox.ini
docs/: conf.py  help.rst  installation.rst  usage.rst
docs/reference/: index.rst  memwiper.rst
memwiper/: .tests.txt.swp  memwiper.c
python-memwiper/memwiper/: __init__.py
python-memwiper/memwiper/utils/: __init__.py
src/memwiper/: __init__.py
src/memwiper/c_src/: memwiper_core.c  memwiper_utils.c
src/memwiper/utils/: __init__.py  _coretest.py
tests/: basictest.txt  conftest.py  test_memwiper.py  test_memwiper_2.py  test_memwiper_utils.py  widetest.txt
